# mnist

./: .gitignore  @  Dockerfile  README.md  ml-work-cronjob  pyproject.toml  run.sh
note/: mnist984.h5  mnist984.keras  mnist_predict.ipynb  mnistp.ipynb
src/mnist/: .worker.py.swp  @  main.py  model.py  worker.py
src/mnist/db/: dml.py
tests/: .test_worker.py.swp  test_worker.py
