[project]
name = "mnist"
version = "0.2.2"
description = "Default template for PDM package"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.1",
    "pytz>=2024.2",
]
requires-python = ">=3.11"

readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
ml-worker = 'mnist.worker:run'
